kubernetes/wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:6.4.3-apache
        ports:
        - containerPort: 80
          name: wordpress
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 120
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 6
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
        - name: apache-config
          mountPath: /etc/apache2/conf-enabled/server-status.conf
          subPath: apache-status.conf
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-data
      - name: apache-config
        configMap:
          name: wordpress-apache-config
