kubernetes/wordpress/wordpress-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-exporter
  namespace: kampfzwerg
  labels:
    app: wordpress-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-exporter
  template:
    metadata:
      labels:
        app: wordpress-exporter
    spec:
      containers:
      - name: wordpress-exporter
        image: bitnami/apache-exporter:0.11.0
        args:
        - --scrape_uri=http://wordpress.wordpress.svc.cluster.local/server-status?auto
        - --telemetry.address=:9117
        - --insecure
        ports:
        - containerPort: 9117
          name: metrics
        livenessProbe:
          httpGet:
            path: /metrics
            port: metrics
          initialDelaySeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /metrics
            port: metrics
          initialDelaySeconds: 10
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-exporter
  namespace: kampfzwerg
  labels:
    app: wordpress-exporter
spec:
  selector:
    app: wordpress-exporter
  ports:
  - port: 9117
    targetPort: 9117
    name: metrics
